syntax = "proto3";

package pb;

import "google/protobuf/wrappers.proto";
import "api.proto";

option go_package = "pointofsale/internal/pb";

message FindAllOrderItemRequest {
    int32 page = 1;
    int32 page_size = 2;
    string search = 3;
}

message FindByIdOrderItemRequest {
    int32 id = 1;
}


message OrderItemResponse {
    int32 id = 1;
    int32 order_id = 2;
    int32 product_id = 3;
    int32 quantity = 4;
    int32 price = 5;
    string created_at = 6;
    string updated_at = 7;
}

message OrderItemResponseDeleteAt {
    int32 id = 1;
    int32 order_id = 2;
    int32 product_id = 3;
    int32 quantity = 4;
    int32 price = 5;
    string created_at = 6;
    string updated_at = 7;
    google.protobuf.StringValue deleted_at = 8;
}

message ApiResponseOrderItem {
    string status = 1;
    string message = 2;
    OrderItemResponse data = 3;
}

message ApiResponsesOrderItem {
    string status = 1;
    string message = 2;
    repeated OrderItemResponse data = 3;
}

message ApiResponseOrderItemDelete {
    string status = 1;
    string message = 2;
}

message ApiResponseOrderItemAll {
    string status = 1;
    string message = 2;
}

message ApiResponsePaginationOrderItemDeleteAt {
    string status = 1;
    string message = 2;
    repeated OrderItemResponseDeleteAt data = 3;
    PaginationMeta pagination = 4;
}

message ApiResponsePaginationOrderItem {
    string status = 1;
    string message = 2;
    repeated OrderItemResponse data = 3;
    PaginationMeta pagination = 4;
}


service OrderItemService {
    rpc FindAll(FindAllOrderItemRequest) returns (ApiResponsePaginationOrderItem);
    rpc FindByActive(FindAllOrderItemRequest) returns (ApiResponsePaginationOrderItemDeleteAt);
    rpc FindByTrashed(FindAllOrderItemRequest) returns (ApiResponsePaginationOrderItemDeleteAt);
    rpc FindOrderItemByOrder(FindByIdOrderItemRequest) returns (ApiResponsesOrderItem);
}